--- a/src/app/views/settings/roles/create/createRol.component.html
+++ b/src/app/views/settings/roles/create/createRol.component.html
@@ -1,15 +1,15 @@
 <div class="card">
 	<div class="card-header d-flex justify-content-between align-items-center">
-		<p class="mb-0 fw-bold">Nuevo rol</p>
-		<a routerLink="/settings/roles" class="btn btn-secondary btn-sm">Regresar</a>
+		<p class="mb-0 fw-bold">{{ 'new' | translate }}</p>
+		<a routerLink="/settings/roles" class="btn btn-secondary btn-sm">{{ 'back' | translate }}</a>
 	</div>
 	<div class="card-body">
 		<form [formGroup]="formRole">
 			<div class="mb-3">
-				<label for="name" class="form-label">Nombre de su nuevo rol</label>
+				<label for="name" class="form-label">{{ 'name' | translate }}</label>
 				<input type="text" class="form-control" id="name" name="name" [ngClass]="{'is-invalid': errorMessages['name']}" formControlName="name" required>
 				<div class="invalid-feedback">
-					{{ errorMessages['name'] }}
+					{{ errorMessages['name'] | translate }}
 				</div>
 			</div>
 			<div class="mb-3">
@@ -28,7 +28,7 @@
 		</form>
 	</div>
 	<div class="card-footer d-flex justify-content-end">
-		<a routerLink="/settings/roles" class="btn btn-secondary me-2">Cancelar</a>
-		<button class="btn btn-primary" (click)="storeRole()">Guardar</button>
+		<a routerLink="/settings/roles" class="btn btn-secondary me-2">{{ 'cancel' | translate }}</a>
+		<button class="btn btn-primary" (click)="storeRole()">{{ 'create' | translate }}</button>
 	</div>
 </div>
