--- a/src/app/views/settings/users/create/createUser.component.html
+++ b/src/app/views/settings/users/create/createUser.component.html
@@ -9,19 +9,25 @@
 				<div class="col-md-4 mb-3">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-person"></i></span>
-						<input type="text" class="form-control" id="username" formControlName="username" name="username" autocomplete="username" placeholder="{{'userName' | translate}}">
+						<input type="text" class="form-control" [ngClass]="{'is-invalid': errorMessages['username']}" id="username" formControlName="username" name="username" autocomplete="username" placeholder="{{'userName' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['username'] | translate }}
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4 mb-3">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-envelope"></i></span>
-						<input type="email" class="form-control" id="email" formControlName="email" name="email" autocomplete="email" placeholder="{{'email' | translate}}">
+						<input type="email" class="form-control" [ngClass]="{'is-invalid': errorMessages['email']}" id="email" formControlName="email" name="email" autocomplete="email" placeholder="{{'email' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['email'] | translate }}
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4 mb-3">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-check2-square"></i></span>
-						<select class="form-select" name="roles" id="roles" formControlName="roles">
+						<select class="form-select" name="roles" [ngClass]="{'is-invalid': errorMessages['roles']}" id="roles" formControlName="roles">
 							<option *ngFor="let role of roles" [value]="role.name">{{role.name}}</option>
 						</select>
 					</div>
@@ -32,13 +38,19 @@
 				<div class="col-md-6 mb-3">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-person"></i></span>
-						<input type="text" class="form-control" id="first_name" formControlName="first_name" name="first_name" placeholder="{{'firstName' | translate}}">
+						<input type="text" class="form-control" [ngClass]="{'is-invalid': errorMessages['first_name']}" id="first_name" formControlName="first_name" name="first_name" placeholder="{{'firstName' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['first_name'] | translate }}
+						</div>
 					</div>
 				</div>
 				<div class="col-md-6 mb-3">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-person"></i></span>
-						<input type="text" class="form-control" id="last_name" formControlName="last_name" name="last_name" placeholder="{{'lastName' | translate}}">
+						<input type="text" class="form-control" [ngClass]="{'is-invalid': errorMessages['last_name']}" id="last_name" formControlName="last_name" name="last_name" placeholder="{{'lastName' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['last_name'] | translate }}
+						</div>
 					</div>
 				</div>
 			</div>
@@ -47,14 +59,20 @@
 				<div class="col-md-6 mb-4">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-lock"></i></span>
-						<input type="password" class="form-control" id="password" formControlName="password" name="password" autocomplete="new-password" placeholder="{{'password' | translate}}">
+						<input type="password" class="form-control" [ngClass]="{'is-invalid': errorMessages['password']}" id="password" formControlName="password" name="password" autocomplete="new-password" placeholder="{{'password' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['password'] | translate }}
+						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6 mb-4">
 					<div class="input-group">
 						<span class="input-group-text"><i class="bi bi-lock"></i></span>
-						<input type="password" class="form-control" id="password_confirmation" formControlName="password_confirmation" name="password_confirmation" autocomplete="new-password" placeholder="{{'confirmPassword' | translate}}">
+						<input type="password" class="form-control" [ngClass]="{'is-invalid': errorMessages['password_confirmation']}" id="password_confirmation" formControlName="password_confirmation" name="password_confirmation" autocomplete="new-password" placeholder="{{'confirmPassword' | translate}}">
+						<div class="invalid-feedback">
+							{{ errorMessages['password_confirmation'] | translate }}
+						</div>
 					</div>
 				</div>
 			</div>
@@ -62,7 +80,7 @@
 		</div>
 		<div class="card-footer d-flex justify-content-end align-items-center">
 			<a routerLink="/settings/users" class="btn btn-secondary me-2">{{ 'cancel' | translate }}</a>
-			<button type="submit" class="btn btn-primary">{{ 'save' | translate }}</button>
+			<button [disabled]="!formUser.valid" type="submit" class="btn btn-primary">{{ 'save' | translate }}</button>
 		</div>
 	</form>
 </div>
