--- a/src/app/views/account/profile/profile.component.html
+++ b/src/app/views/account/profile/profile.component.html
@@ -18,7 +18,7 @@
 								<span class="input-group-text"><i class="bi bi-person"></i></span>
 								<input type="text" class="form-control" id="first_name" [ngClass]="{'is-invalid': errorMessages['first_name']}" formControlName="first_name" name="first_name" placeholder="{{'firstName' | translate}}">
 								<div class="invalid-feedback">
-									{{ errorMessages['first_name'] }}
+									{{ errorMessages['first_name'] | translate }}
 								</div>
 							</div>
 						</div>
@@ -27,7 +27,7 @@
 								<span class="input-group-text"><i class="bi bi-person"></i></span>
 								<input type="text" class="form-control" id="last_name" [ngClass]="{'is-invalid': errorMessages['last_name']}" formControlName="last_name" name="last_name" placeholder="{{'lastName' | translate}}">
 								<div class="invalid-feedback">
-									{{ errorMessages['last_name'] }}
+									{{ errorMessages['last_name'] | translate }}
 								</div>
 							</div>
 						</div>
@@ -38,7 +38,7 @@
 								<span class="input-group-text"><i class="bi bi-envelope"></i></span>
 								<input type="email" class="form-control" id="email" [ngClass]="{'is-invalid': errorMessages['email']}" formControlName="email" name="email" autocomplete="email" placeholder="{{'email' | translate}}">
 								<div class="invalid-feedback">
-									{{ errorMessages['email'] }}
+									{{ errorMessages['email'] | translate }}
 								</div>
 							</div>
 						</div>
@@ -58,7 +58,7 @@
 							<label for="avatarFile" class="input-group-text"><i class="bi bi-cloud-upload-fill"></i></label>
 							<input type="file" class="form-control" id="avatarFile" #avatarFile (change)="onFileSelected($event)" [accept]="allowedTypes">
 							<div class="invalid-feedback">
-								{{ errorMessages['avatar'] }}
+								{{ errorMessages['avatar'] | translate }}
 							</div>
 						</div>
 					</div>
